Fixed overlapping profile picture on small displays

--- a/gamesite/feed/static/feed/feed.css
+++ b/gamesite/feed/static/feed/feed.css
@@ -134,10 +134,9 @@ a.article-title:hover {
 }
 
 .account-img {
-  height: 125px;
-  width: 125px;
-  margin-right: 20px;
+  width: 90%;
   margin-bottom: 16px;
+  margin-top: 10px;
 }
 
 .account-img-sm {
